--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "test": "mocha test/*.test.js",
-    "test-watch": "nodemon --exec npm test"
+    "test-watch": "nodemon --exec \"npm test\""
   },
   "repository": {
     "type": "git",
