--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "test": "mocha test/*.test.js",
+    "test": "mocha server/**/*test.js",
     "test-watch": "nodemon --exec \"npm test\""
   },
   "repository": {
