--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "homepage": "https://github.com/ammein/cgc-api#readme",
   "dependencies": {
     "body-parser": "^1.18.2",
-    "mongo-db": "^1.0.2",
+    "mongodb": "^3.0.7",
     "mongoose": "^5.0.15"
   },
   "devDependencies": {
