--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
   "homepage": "https://github.com/ammein/cgc-api#readme",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "hbs": "^4.0.1",
+    "lodash": "^4.17.5",
     "mongodb": "^3.0.7",
     "mongoose": "^5.0.15"
   },
   "devDependencies": {
     "expect": "^1.20.2",
-    "express": "^4.14.0",
+    "express": "^4.16.3",
     "mocha": "^3.0.0",
     "nodemon": "^1.17.3",
     "supertest": "^3.0.0"
