--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
   "homepage": "https://github.com/ammein/cgc-api#readme",
   "dependencies": {
     "body-parser": "^1.18.2",
-    "hbs": "^4.0.1",
     "lodash": "^4.17.5",
     "mongodb": "^3.0.7",
-    "mongoose": "^5.0.15"
+    "mongoose": "^5.0.15",
+    "nunjucks": "^3.1.2"
   },
   "devDependencies": {
     "expect": "^1.20.2",
