--- a/package.json
+++ b/package.json
@@ -27,13 +27,16 @@
     "jquery": "^3.3.1",
     "jsdom": "^7.2.2",
     "lodash": "^4.17.5",
+    "mime-types": "^2.1.18",
     "mongodb": "^3.0.7",
     "mongoose": "^5.0.15",
     "nunjucks": "^3.1.2"
   },
   "devDependencies": {
+    "browser-sync": "^2.23.7",
     "expect": "^1.20.2",
     "express": "^4.16.3",
+    "gulp-inject": "^4.3.2",
     "gulp-nunjucks-render": "^1.1.10",
     "mocha": "^3.0.0",
     "nodemon": "^1.17.3",
