--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "gulp": "^3.9.1",
+    "gulp-data": "^1.3.1",
     "jquery": "^3.3.1",
     "jsdom": "^7.2.2",
     "lodash": "^4.17.5",
@@ -36,6 +37,7 @@
     "expect": "^1.20.2",
     "express": "^4.16.3",
     "gulp-inject": "^4.3.2",
+    "gulp-nunjucks": "^3.1.1",
     "gulp-nunjucks-render": "^1.1.10",
     "mocha": "^3.0.0",
     "nodemon": "^1.17.3",
