--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "lodash": "^4.17.5",
     "mongodb": "^3.0.7",
     "mongoose": "^5.0.15",
+    "mongoose-paginate": "^5.0.3",
     "nunjucks": "^3.1.2"
   },
   "devDependencies": {
