--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "socket.io": "^2.1.0"
   },
   "devDependencies": {
+    "barba.js": "^1.0.0",
     "browser-sync": "^2.23.7",
     "expect": "^1.20.2",
     "express": "^4.16.3",
